Ajustement Liste Projet

--- a/Affichage.html
+++ b/Affichage.html
@@ -103,6 +103,10 @@
       cursor: pointer;
     }
 
+    #firstColumnDropdown {
+      width: 320px;
+    }
+  
     /* Context Menu Styles */
     .context-menu {
       display: none;
