--- a/Affichage.html
+++ b/Affichage.html
@@ -71,6 +71,24 @@
       color: black;
     }
 
+    input[type="date"] {
+      -webkit-appearance: none;
+      -moz-appearance: none;
+      appearance: none;
+      background: transparent;
+      position: relative;
+      width: 300px;
+      box-sizing: border-box;
+      padding-right: 10px;
+      background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='white' viewBox='0 0 30 30'%3E%3Cpath d='M19 4h-1V2h-2v2H8V2H6v2H5C3.9 4 3 4.9 3 6v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 16H5V9h14v11z'/%3E%3C/svg%3E");
+      background-repeat: no-repeat;
+      background-position: right 2px center;
+    }
+    
+    input[type="date"]::-webkit-calendar-picker-indicator {
+      opacity: 0;
+    }
+    
     .table-container {
       margin-top: 0px;
       padding: 0px;
