Mise à jour colonne référence
Taille de 400px pour la colonne référence minimale

--- a/Affichage.html
+++ b/Affichage.html
@@ -107,6 +107,13 @@
     #dataTable td:nth-child(1) {
       display: none;
     }
+
+    #dataTable th:nth-child(3),
+    #dataTable td:nth-child(3) {
+      min-width: 400px;
+      white-space: normal;
+      overflow-wrap: break-word;
+    }
     
     .add-form {
       margin-top: 10px;
