--- a/Affichage.html
+++ b/Affichage.html
@@ -287,8 +287,7 @@
       text-overflow: clip; /* Pas de "..." ni troncature */
       text-align: left; /* Aligne strictement le texte à gauche */
       font-size: 1em; /* Ajuste encore un peu plus la taille du texte du span */
-    }
-    
+    } 
   </style>
 </head>
 
@@ -1452,7 +1451,7 @@
           NomDocument: combinedDocumentName,
           Emetteur: emetteur,
           Reference: '_',
-          Indice: '_',
+          Indice: '-',
           Recu: '1900-01-01',
           DescriptionObservations: 'EN ATTENTE',
           DateLimite: defaultDatelimite,
@@ -2600,7 +2599,7 @@
             NomDocument: combinedDocumentName,
             Emetteur: emetteur,
             Reference: '_',
-            Indice: '_',
+            Indice: '-',
             Recu: '1900-01-01',
             DescriptionObservations: 'EN ATTENTE',
             DateLimite: defaultDatelimite,
