--- a/Gantt/index.html
+++ b/Gantt/index.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html lang="fr">
-
 <head>
   <meta charset="UTF-8">
-  <title>Gant - Sélection Projet</title>
+  <title>Gantt - Projet</title>
 
   <!-- Grist Plugin -->
   <script src="https://docs.getgrist.com/grist-plugin-api.js"></script>
 
-  <!-- Frappe Gantt -->
-  <link rel="stylesheet" href="https://unpkg.com/frappe-gantt/dist/frappe-gantt.css">
+  <!-- Frappe Gantt Library -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/frappe-gantt@0.6.1/dist/frappe-gantt.css">
   <script src="https://cdn.jsdelivr.net/npm/frappe-gantt@0.6.1/dist/frappe-gantt.min.js"></script>
 
   <!-- Styles personnalisés -->
@@ -19,9 +18,60 @@
   <!-- Scripts -->
   <script src="script.js" defer></script>
   <script src="gantt.js" defer></script>
+
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background-color: #2c2c2c;
+      color: white;
+    }
+    .sticky-container {
+      position: sticky;
+      top: 0;
+      background-color: #2c2c2c;
+      padding: 20px;
+      display: flex;
+      gap: 20px;
+      align-items: center;
+      z-index: 1000;
+      box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    }
+    label {
+      font-weight: bold;
+      margin-bottom: 10px;
+    }
+    select {
+      width: 220px;
+      padding: 8px;
+      background-color: #444;
+      color: white;
+      border: 1px solid #666;
+    }
+    #gantt-container {
+      display: flex;
+      flex-direction: row;
+      width: 100%;
+    }
+    #task-list {
+      width: 250px;
+      background-color: #2c2c2c;
+      border-right: 3px solid #666;
+      display: flex;
+      flex-direction: column;
+      flex-shrink: 0;
+    }    
+    #gantt {
+      flex-grow: 1;
+      background-color: #1e1e1e;
+      overflow-x: auto;
+    }
+  </style>
 </head>
 
 <body>
+
+  <!-- Sélection Projet / Document -->
   <div class="sticky-container">
     <div class="dropdown-container">
       <label for="projectDropdown">Projet :</label>
@@ -38,7 +88,32 @@
     </div>
   </div>
 
-  <div id="gantt" style="margin: 40px;"></div>
+  <!-- Conteneur liste + Gantt côte à côte -->
+  <div id="gantt-container-scroll">
+    <div id="gantt-container">
+  
+      <!-- Colonne gauche -->
+      <div id="task-list">
+        <div class="header">Émetteur</div>
+        <div id="task-rows"></div>
+      </div>
+  
+      <!-- Gantt à droite -->
+      <div id="gantt-right">
+        <div id="gantt-scroll-container">
+          <div id="gantt"></div>
+        </div>
+      </div>
+  
+    </div>
+  </div>
+  
+  <!-- Scrollbar horizontale en bas pour le Gantt -->
+  <div id="gantt-scrollbar-fixed">
+    <div id="gantt-scroll-inner"></div>
+  </div>
+  
+  
 </body>
 
 </html>
