--- a/ListeDePlan/index.html
+++ b/ListeDePlan/index.html
@@ -10,10 +10,12 @@
   <!-- Styles -->
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="affichage.css">
+  <link rel="stylesheet" href="contextMenu.css">
 
   <!-- Scripts -->
   <script src="script.js" defer></script>
   <script src="affichage.js" defer></script>
+  <script src="contextMenu.js" defer></script>
 </head>
 <body>
   <div class="sticky-container">
@@ -33,7 +35,8 @@
   </div>
 
   <div id="plans-output">
-    <!-- Contenu affiché dynamiquement -->
+    
   </div>
+
 </body>
 </html>
