--- a/ListeDePlan/index.html
+++ b/ListeDePlan/index.html
@@ -8,11 +8,14 @@
   <script src="https://docs.getgrist.com/grist-plugin-api.js"></script>
 
   <!-- Styles -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="affichage.css">
   <link rel="stylesheet" href="contextMenu.css">
 
   <!-- Scripts -->
+  <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+  <script src="https://npmcdn.com/flatpickr/dist/l10n/fr.js"></script>
   <script src="script.js" defer></script>
   <script src="affichage.js" defer></script>
   <script src="contextMenu.js" defer></script>
