--- a/ListeDePlan/index.html
+++ b/ListeDePlan/index.html
@@ -30,9 +30,9 @@
     </div>
 
     <div class="dropdown-container">
-      <label for="designationDropdown">Désignation :</label>
-      <select id="designationDropdown">
-        <option value="">Choisir une désignation</option>
+      <label for="typeDocumentDropdown">Type document :</label>
+      <select id="typeDocumentDropdown">
+        <option value="">Choisir un type</option>
       </select>
     </div>
   </div>
