indice moyen ok

--- a/ListeDePlan/avancement.html
+++ b/ListeDePlan/avancement.html
@@ -26,8 +26,11 @@
     </div>
   </div>
 
-  <div class="chart-container" style="position: relative; height:60vh; width:80vw">
-    <canvas id="avancementChart"></canvas>
+  <div class="main-container">
+    <div class="chart-container" style="position: relative; height:60vh; width:80vw">
+      <canvas id="avancementChart"></canvas>
+    </div>
+    <div id="average-indices-container"></div>
   </div>
   
   <div id="stats-output"></div>
