bordereau base ui ok

--- a/ListeDePlan/bordereau.html
+++ b/ListeDePlan/bordereau.html
@@ -24,7 +24,13 @@
     </div>
     <div class="info-container">
       <label for="refInput">Ref:</label>
-      <input type="text" id="refInput">
+      <div class="ref-container">
+        <input type="text" id="refInput">
+        <div class="ref-arrows">
+          <button id="refUp">▲</button>
+          <button id="refDown">▼</button>
+        </div>
+      </div>
       <label for="dateInput">Date:</label>
       <input type="date" id="dateInput">
     </div>
