--- a/gestion-depenses/index.html
+++ b/gestion-depenses/index.html
@@ -31,6 +31,11 @@
             <div class="toolbar">
                 <label for="year-select">Année:</label>
                 <select id="year-select"></select>
+                <span id="current-month-year"></span>
+                <button id="prev-month-btn"><</button>
+                <button id="next-month-btn">></button>
+                <label for="month-span-input">Mois à afficher:</label>
+                <input type="number" id="month-span-input" value="3" min="1" max="12">
             </div>
 
             <h3>Prévisionnel - Plan de Charge</h3>
