--- a/gestion-depenses/index.html
+++ b/gestion-depenses/index.html
@@ -53,7 +53,13 @@
                 <input type="number" id="month-span-input" value="3" min="1" max="24">
             </div>
 
-            <h3>Prévisionnel - Plan de Charge</h3>
+            <div class="table-header">
+                <h3>Prévisionnel - Plan de Charge</h3>
+                <div>
+                    <button class="prev-month-table-btn"><</button>
+                    <button class="next-month-table-btn">></button>
+                </div>
+            </div>
             <table id="charge-plan-table">
                 <thead>
                     <tr>
@@ -70,7 +76,13 @@
                 <button id="save-worker-btn">Enregistrer</button>
             </div>
 
-            <h3>Prévisionnel - Dépense</h3>
+            <div class="table-header">
+                <h3>Prévisionnel - Dépense</h3>
+                <div>
+                    <button class="prev-month-table-btn"><</button>
+                    <button class="next-month-table-btn">></button>
+                </div>
+            </div>
             <table id="expense-table">
                 <thead>
                     <tr>
@@ -81,7 +93,13 @@
                 <tbody></tbody>
             </table>
 
-            <h3>Dépenses Réelles</h3>
+            <div class="table-header">
+                <h3>Dépenses Réelles</h3>
+                <div>
+                    <button class="prev-month-table-btn"><</button>
+                    <button class="next-month-table-btn">></button>
+                </div>
+            </div>
             <table id="real-expense-table">
                 <thead>
                     <tr>
