--- a/gestion-depenses/index.html
+++ b/gestion-depenses/index.html
@@ -28,7 +28,10 @@
     <div class="container">
         <div class="main-content">
             <div class="project-header">
-                <h2 id="current-project-name"></h2>
+                <div>
+                    <p><strong>Numéro:</strong> <span id="current-project-number"></span></p>
+                    <h2 id="current-project-name"></h2>
+                </div>
                 <div>
                     <p>Budget Total: <span id="total-project-budget"></span></p>
                     <div id="current-project-budget-breakdown"></div>
@@ -51,7 +54,7 @@
                 <button id="next-month-btn">></button>
                 <span id="current-month-year"></span>
                 <label for="month-span-input">Mois à afficher:</label>
-                <input type="number" id="month-span-input" value="3" min="1" max="24">
+                <input type="number" id="month-span-input" value="6" min="1" max="24">
             </div>
 
             <div class="table-header">
