--- a/gestion-depenses/index.html
+++ b/gestion-depenses/index.html
@@ -75,8 +75,10 @@
             </table>
             <button id="add-worker-btn">Ajouter un travailleur</button>
             <div id="add-worker-form" style="display: none;">
-                <input type="text" id="worker-role" placeholder="Rôle du travailleur">
-                <input type="text" id="worker-name" placeholder="Nom du travailleur">
+                <input type="text" id="worker-role" placeholder="Rôle du travailleur" list="worker-roles-list">
+                <datalist id="worker-roles-list"></datalist>
+                <input type="text" id="worker-name" placeholder="Nom du travailleur" list="worker-names-list">
+                <datalist id="worker-names-list"></datalist>
                 <button id="save-worker-btn">Enregistrer</button>
             </div>
 
