--- a/gestion-equipe/index.html
+++ b/gestion-equipe/index.html
@@ -17,6 +17,7 @@
           <th>Nom</th>
           <th>Email</th>
           <th>Service</th>
+          <th>Role</th>
           <th>IdTrefle</th>
         </tr>
       </thead>
@@ -41,6 +42,8 @@
       <input type="email" id="email" name="email" required>
       <label for="service">Service:</label>
       <input type="text" id="service" name="service" required>
+      <label for="role">Role:</label>
+      <input type="text" id="role" name="role" required>
       <label for="idTrefle">IdTrefle:</label>
       <input type="text" id="idTrefle" name="idTrefle">
       <div class="dialog-buttons">
@@ -61,6 +64,8 @@
       <input type="email" id="editEmail" name="editEmail" required>
       <label for="editService">Service:</label>
       <input type="text" id="editService" name="editService" required>
+      <label for="editRole">Role:</label>
+      <input type="text" id="editRole" name="editRole" required>
       <label for="editIdTrefle">IdTrefle:</label>
       <input type="text" id="editIdTrefle" name="editIdTrefle">
       <div class="dialog-buttons">
