--- a/creation-projet/index.html
+++ b/creation-projet/index.html
@@ -37,9 +37,24 @@
         </div>
 
         <div class="wizard-step" id="step-4" style="display: none;">
-            <h2>Étape 4: Révision et Création</h2>
-            <div id="review-container"></div>
+            <h2>Étape 4: Documents & Émetteurs</h2>
+
+            <h3>Documents du projet (étages)</h3>
+            <div id="documents-selection-container"></div>
+
+            <h3>Émetteurs par défaut</h3>
+            <div id="emitters-selection-container"></div>
+
             <button id="prev-to-step-3">Précédent</button>
+            <button id="next-to-step-5">Suivant</button>
+        </div>
+
+
+
+        <div class="wizard-step" id="step-5" style="display: none;">
+            <h2>Étape 5: Révision et Création</h2>
+            <div id="review-container"></div>
+            <button id="prev-to-step-4">Précédent</button>
             <button id="create-project-btn">Créer le Projet</button>
         </div>
     </div>
