--- a/creation-projet/index.html
+++ b/creation-projet/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Création de Projet</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div class="wizard-container">
         <h1>Créer un nouveau projet</h1>
@@ -39,8 +41,63 @@
         <div class="wizard-step" id="step-4" style="display: none;">
             <h2>Étape 4: Documents & Émetteurs</h2>
 
-            <h3>Documents du projet (étages)</h3>
+            <div class="section-header">
+                <h3>Documents du projet (étages)</h3>
+                <button type="button" id="open-docs-modal-btn" class="add-btn">+ Ajouter</button>
+            </div>
             <div id="documents-selection-container"></div>
+
+            <!-- Modal Dialog for Document Creation -->
+            <div id="docs-modal" class="modal-overlay" style="display: none;">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h3>Ajouter des documents</h3>
+                        <button type="button" id="close-docs-modal" class="modal-close">&times;</button>
+                    </div>
+                    <div class="modal-tabs">
+                        <button type="button" class="tab-btn active" data-tab="manual">Manuel</button>
+                        <button type="button" class="tab-btn" data-tab="pattern">Avec motif</button>
+                    </div>
+                    <div class="tab-content" id="tab-manual">
+                        <label for="manual-doc-name">Nom du document :</label>
+                        <input type="text" id="manual-doc-name" placeholder="Ex: RDC, SS1, R+3...">
+                        <button type="button" id="add-manual-doc-btn" class="primary-btn">Ajouter</button>
+                    </div>
+                    <div class="tab-content" id="tab-pattern" style="display: none;">
+                        <div class="form-group">
+                            <label for="pattern-prefix">Préfixe :</label>
+                            <input type="text" id="pattern-prefix" placeholder="Ex: R+, SS, Étage">
+                        </div>
+                        <div class="form-group">
+                            <label for="pattern-suffix">Suffixe (optionnel) :</label>
+                            <input type="text" id="pattern-suffix" placeholder="Ex: -A, _bis">
+                        </div>
+                        <div class="form-row">
+                            <div class="form-group">
+                                <label for="pattern-start">De :</label>
+                                <input type="number" id="pattern-start" value="1" min="0">
+                            </div>
+                            <div class="form-group">
+                                <label for="pattern-end">À :</label>
+                                <input type="number" id="pattern-end" value="5" min="0">
+                            </div>
+                            <div class="form-group">
+                                <label for="pattern-padding">Padding (chiffres) :</label>
+                                <select id="pattern-padding">
+                                    <option value="0">Aucun (1, 2, 10)</option>
+                                    <option value="2">2 chiffres (01, 02, 10)</option>
+                                    <option value="3">3 chiffres (001, 002)</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="pattern-preview">
+                            <strong>Aperçu :</strong> <span id="pattern-preview-text">R+1, R+2, R+3, R+4, R+5</span>
+                        </div>
+                        <button type="button" id="add-pattern-docs-btn" class="primary-btn">Ajouter les
+                            documents</button>
+                    </div>
+                </div>
+            </div>
 
             <h3>Émetteurs par défaut</h3>
             <div id="emitters-selection-container"></div>
@@ -62,4 +119,5 @@
     <script src="https://docs.getgrist.com/grist-plugin-api.js"></script>
     <script src="app.js"></script>
 </body>
+
 </html>
