--- a/creation-projet/index.html
+++ b/creation-projet/index.html
@@ -59,8 +59,14 @@
                         <button type="button" class="tab-btn" data-tab="pattern">Avec motif</button>
                     </div>
                     <div class="tab-content" id="tab-manual">
-                        <label for="manual-doc-name">Nom du document :</label>
-                        <input type="text" id="manual-doc-name" placeholder="Ex: RDC, SS1, R+3...">
+                        <div class="form-group">
+                            <label for="manual-doc-name">Nom du document :</label>
+                            <input type="text" id="manual-doc-name" placeholder="Ex: RDC, SS1, R+3...">
+                        </div>
+                        <div class="form-group">
+                            <label for="manual-doc-numero">N°Document :</label>
+                            <input type="text" id="manual-doc-numero" placeholder="Ex: 001, A-01...">
+                        </div>
                         <button type="button" id="add-manual-doc-btn" class="primary-btn">Ajouter</button>
                     </div>
                     <div class="tab-content" id="tab-pattern" style="display: none;">
@@ -90,8 +96,40 @@
                                 </select>
                             </div>
                         </div>
+                        <fieldset class="numero-fieldset">
+                            <legend>N°Document</legend>
+                            <div class="form-row">
+                                <div class="form-group">
+                                    <label for="numero-start">Début :</label>
+                                    <input type="number" id="numero-start" value="1" min="0">
+                                </div>
+                                <div class="form-group">
+                                    <label for="numero-step">Pas :</label>
+                                    <input type="number" id="numero-step" value="1" min="1">
+                                </div>
+                                <div class="form-group">
+                                    <label for="numero-padding">Padding :</label>
+                                    <select id="numero-padding">
+                                        <option value="0">Aucun (1, 2, 10)</option>
+                                        <option value="2">2 chiffres (01, 02)</option>
+                                        <option value="3" selected>3 chiffres (001, 002)</option>
+                                        <option value="4">4 chiffres (0001, 0002)</option>
+                                    </select>
+                                </div>
+                            </div>
+                        </fieldset>
                         <div class="pattern-preview">
-                            <strong>Aperçu :</strong> <span id="pattern-preview-text">R+1, R+2, R+3, R+4, R+5</span>
+                            <strong>Aperçu :</strong>
+                            <table class="preview-table" id="pattern-preview-table">
+                                <thead>
+                                    <tr>
+                                        <th>N°Document</th>
+                                        <th>Nom Document</th>
+                                    </tr>
+                                </thead>
+                                <tbody id="pattern-preview-body">
+                                </tbody>
+                            </table>
                         </div>
                         <button type="button" id="add-pattern-docs-btn" class="primary-btn">Ajouter les
                             documents</button>
