--- a/EnAttente/index.html
+++ b/EnAttente/index.html
@@ -1,39 +1,37 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta charset="utf-8">
   <title>MonWidget</title>
 
-  <link rel="stylesheet" href="./css/style.css" />
-  <link rel="stylesheet" href="./css/components.css" />
-
-  <!-- API Grist -->
   <script src="https://docs.getgrist.com/grist-plugin-api.js"></script>
+
+  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="./css/components.css">
 </head>
 
 <body>
-  <div id="app">
-    <header class="toolbar">
-      <div class="toolbar-left">
-        <div class="title">MonWidget</div>
+  <!-- Sticky container -->
+  <div class="sticky-container">
+    <div class="dropdown-container">
+      <label for="firstColumnDropdown">Projet :</label>
+      <select id="firstColumnDropdown">
+        <option value="">Choix projet</option>
+      </select>
+    </div>
 
-        <select id="selectProjet" class="select"></select>
-        <select id="selectDocument" class="select"></select>
-      </div>
-
-      <div class="toolbar-right">
-        <button id="btnRefresh" class="btn">Rafraîchir</button>
-      </div>
-    </header>
-
-    <main class="main">
-      <div id="status" class="status">Chargement…</div>
-      <div id="content" class="content"></div>
-    </main>
+    <div class="dropdown-container">
+      <label for="secondColumnListbox">Document :</label>
+      <select id="secondColumnListbox" disabled>
+        <option value="">Sélectionner un étage</option>
+      </select>
+    </div>
   </div>
 
-  <!-- scripts (ordre important) -->
+  <!-- Zone vide -->
+  <div id="content" style="padding: 20px;"></div>
+
+  <!-- scripts -->
   <script src="./js/utils.js"></script>
   <script src="./js/grist.js"></script>
   <script src="./js/render.js"></script>
